fix(gateway): Define URI as a string instead of java.net.URI to avoid some characters encoding
Closes gravitee-io/issues#4837